Replaced files with Moonlight to see the difference